# proxmox-infrastructure-admin

./: .gitignore  AI_integration_guide.md  DEVELOPMENT.md  LICENSE  README.md  index.html  install-arch.sh  network-devices.md  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/views/: Containers.vue  Dashboard.vue  Maintenance.vue  ProxmoxHost.vue  SystemHealth.vue  VirtualMachines.vue
