[package]
name = "proxmox-infrastructure-admin"
version = "0.1.0"
description = "A Tauri App for administrating Proxmox infrastructure (Media Stack, AI, Home Assistant, Alexa)"
authors = ["Lou Fogle"]
license = "MIT"
repository = "https://github.com/wlfogle/proxmox-infrastructure-admin"
default-run = "proxmox-infrastructure-admin"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
