[package]
name = "proxmox-infrastructure-admin"
version = "0.1.0"
description = "A Tauri App for administrating Proxmox infrastructure"
authors = ["Lou Fogle"]
license = "MIT"
repository = "https://github.com/wlfogle/proxmox-infrastructure-admin"
default-run = "proxmox-infrastructure-admin"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
